--- a/src/app/index/index.component.html
+++ b/src/app/index/index.component.html
@@ -5,7 +5,7 @@
     </ngb-alert>
   </p>
   <h1>
-    Welcome to {{ title }}!
+    ¡Bienvenido a {{ title }}!
   </h1>
   <input type="button" value="Escaneos" routerLink="/scans" />
 </div>
