--- a/src/app/index/index.component.html
+++ b/src/app/index/index.component.html
@@ -7,5 +7,5 @@
   <h1>
     ¡Bienvenido a {{ title }}!
   </h1>
-  <input type="button" value="Escaneos" routerLink="/scans" />
+  <input class="btn btn-primary" type="button" value="Escaneos" routerLink="/scans" />
 </div>
