--- a/src/app/paypal/paypal.component.html
+++ b/src/app/paypal/paypal.component.html
@@ -1,3 +1,4 @@
 <p>
   paypal works!
 </p>
+<input class="btn btn-primary" type="button" value="Iniciar proceso paypal" (click)="startPaypalPayment()"/>
