--- a/src/app/index/index.component.html
+++ b/src/app/index/index.component.html
@@ -1,11 +1,8 @@
-<div style="text-align:center">
-  <p>
-    <ngb-alert [dismissible]="false">
-      <strong>Alerta!</strong> Prueba de ng-bootstrap
-    </ngb-alert>
-  </p>
-  <h1>
-    ¡Bienvenido a {{ title }}!
-  </h1>
-  <input class="btn btn-primary" type="button" value="Escaneos" routerLink="/scans" />
+<div class=row>
+    <div class="jumbotron jumbotron-fluid">
+        <div class="container">
+          <h1 class="display-4">Urudin</h1>
+          <p class="lead">¡Bienvenido!</p>
+        </div>
+      </div>
 </div>
