--- a/src/app/paypal/paypal.component.html
+++ b/src/app/paypal/paypal.component.html
@@ -1,4 +1,11 @@
-<p>
-  paypal works!
-</p>
-<input class="btn btn-primary" type="button" value="Iniciar proceso paypal" (click)="startPaypalPayment()"/>
+<div class=row>
+    <div class="jumbotron jumbotron-fluid">
+        <div class="container">
+          <h1 class="display-4">Paypal</h1>
+          <p class="lead">(Prueba de conceptos)</p>
+        </div>
+      </div>
+</div>
+<div class="row">
+    <input class="btn btn-primary btn-block" type="button" value="Iniciar proceso paypal" (click)="startPaypalPayment()"/>
+</div>
