--- a/src/app/scan/scan.component.html
+++ b/src/app/scan/scan.component.html
@@ -1,34 +1,41 @@
-<div class="no-data text-center" *ngIf="Scans.length == 0">
-  <p>No hay scans!</p>
-</div>
-
-<!-- Employees list table, it hides when there is no employee -->
-<div *ngIf="Scans.length !== 0">
+<div class=row>
   <div class="jumbotron jumbotron-fluid">
     <div class="container">
       <h1 class="display-4">Listado de escaneos QR</h1>
       <p class="lead">(Prueba de conceptos)</p>
     </div>
   </div>
-  <div class="col-md-12">
-    <table class="table table-bordered">
-      <thead>
-        <tr>
-          <th scope="col">Identificador scan</th>
-          <th scope="col">Cliente</th>
-          <th scope="col">Scooter</th>
-          <th scope="col">Fecha</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr *ngFor="let scan of Scans">
-          <td>{{scan.id}}</td>
-          <td>{{scan.cliente.email}}</td>
-          <td>{{scan.scooter.latitud}}</td>
-          <td>{{scan.scooter.longitud}}</td>
-          <td>{{scan.fecha}}</td>
-        </tr>
-      </tbody>
-    </table>
+</div>
+<div class=row>
+  <div class="no-data text-center" *ngIf="Scans.length == 0">
+    <p>
+      <ngb-alert [dismissible]="false">
+        <strong>¡Oh, no!</strong> Aun no hay scans :(
+      </ngb-alert>
+    </p>
+  </div>
+</div>
+<div *ngIf="Scans.length !== 0">
+  <div class=row>
+    <div class="col-md-12">
+      <table class="table">
+        <thead class="thead-light">
+          <tr>
+            <th scope="col">Identificador scan</th>
+            <th scope="col">Cliente</th>
+            <th scope="col">Geolocalización</th>
+            <th scope="col">Fecha</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr *ngFor="let scan of Scans">
+            <td>{{scan.id}}</td>
+            <td>{{scan.cliente.email}}</td>
+            <td>{{scan.scooter.latitud}},{{scan.scooter.longitud}}</td>
+            <td>{{scan.fecha}}</td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
   </div>
 </div>
