--- a/src/app/scan/scan.component.html
+++ b/src/app/scan/scan.component.html
@@ -18,7 +18,7 @@
 <div *ngIf="Scans.length !== 0">
   <div class=row>
     <div class="col-md-12">
-      <table class="table">
+      <table id="scantable" class="table">
         <thead class="thead-light">
           <tr>
             <th scope="col">Identificador scan</th>
