--- a/src/app/admin/navbar/navbar.component.html
+++ b/src/app/admin/navbar/navbar.component.html
@@ -7,13 +7,13 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item">
-        <a class="nav-link" routerLink="/index">Principal</a>
+        <a class="nav-link" routerLink="/admin">Principal</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" routerLink="/scans">Escaneos</a>
+        <a class="nav-link" routerLink="/admin/scans">Escaneos</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" routerLink="/paypal">Paypal</a>
+        <a class="nav-link" routerLink="/admin/paypal">Paypal</a>
       </li>
     </ul>
   </div>
