--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -1,4 +1,4 @@
 <app-navbar></app-navbar>
 <div class="container-fluid">
-    <router-outlet name="admin_outlet"></router-outlet>
+    <router-outlet></router-outlet>
 </div>
