--- a/src/app/admin/navbar/navbar.component.html
+++ b/src/app/admin/navbar/navbar.component.html
@@ -10,6 +10,9 @@
         <a class="nav-link" routerLink="/admin/">Principal</a>
       </li>
       <li class="nav-item">
+          <a class="nav-link" routerLink="/admin/scooters">Scooters</a>
+        </li>
+      <li class="nav-item">
         <a class="nav-link" routerLink="/admin/scans">Escaneos</a>
       </li>
       <li class="nav-item">
