--- a/src/app/admin/scooters/scooters.component.html
+++ b/src/app/admin/scooters/scooters.component.html
@@ -1,52 +1,1 @@
-<div class=row>
-  <div class="jumbotron jumbotron-fluid">
-    <div class="container">
-      <h1 class="display-4">Administración de scooters</h1>
-    </div>
-  </div>
-</div>
-<div class=row>
-  <div class="no-data text-center" *ngIf="Scooters.length == 0">
-    <p>
-      <ngb-alert [dismissible]="false">
-        <strong>¡Oh, no!</strong> Aun no hay Scooters :(
-      </ngb-alert>
-    </p>
-  </div>
-</div>
-<div *ngIf="Scooters.length !== 0">
-    <div class=row>
-        <table class="table">
-          <thead class="thead-light">
-            <tr>
-              <th scope="col">Numero serial</th>
-              <th scope="col">Batería</th>
-              <th scope="col">Ubicación</th>
-              <th scope="col">Ver</th>
-              <th scope="col">Modificar</th>
-              <th scope="col">Eliminar</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <th scope="row">1</th>
-              <td>Mark</td>
-              <td>Otto</td>
-              <td>@mdo</td>
-            </tr>
-            <tr>
-              <th scope="row">2</th>
-              <td>Jacob</td>
-              <td>Thornton</td>
-              <td>@fat</td>
-            </tr>
-            <tr>
-              <th scope="row">3</th>
-              <td>Larry</td>
-              <td>the Bird</td>
-              <td>@twitter</td>
-            </tr>
-          </tbody>
-        </table>
-      </div>
-</div>
+<router-outlet></router-outlet>
