--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,21 +1,35 @@
 /* You can add global styles to this file, and also import other style files */
-div{
-    &.row{
-        .no-data{
-            width:100%;
-        }
-        .jumbotron{
-            width:100%;
-            margin-bottom: 0;
-        }
+div {
+  &.row {
+    .no-data {
+      width: 100%;
     }
+    .jumbotron {
+      width: 100%;
+      margin-bottom: 0;
+    }
+  }
 }
-.action-group{
-    margin: 10px auto;
-    text-align: center;
-    width: calc(100% - 20px);
-    button{
-        margin-left: 5px;
-        margin-right:5px;
-    }
+.action-group {
+  margin: 10px auto;
+  text-align: center;
+  width: calc(100% - 20px);
+  button {
+    margin-left: 5px;
+    margin-right: 5px;
+  }
+}
+
+.alerts {
+  position: fixed;
+  max-width: 100%;
+  right: 25px;
+  left:25px;
+  bottom:25px;
+  z-index: 20000;
+  overflow-x: auto;
+}
+
+.alerts-msg {
+  white-space: pre-wrap;
 }
