--- a/src/app/admin/navbar/navbar.component.html
+++ b/src/app/admin/navbar/navbar.component.html
@@ -10,8 +10,11 @@
         <a class="nav-link" routerLink="/admin/">Principal</a>
       </li>
       <li class="nav-item">
-          <a class="nav-link" routerLink="/admin/scooters">Scooters</a>
-        </li>
+        <a class="nav-link" routerLink="/admin/scooters">Scooters</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/admin/parameters">Parametros</a>
+      </li>
       <li class="nav-item">
         <a class="nav-link" routerLink="/admin/scans">Escaneos</a>
       </li>
@@ -20,9 +23,9 @@
       </li>
     </ul>
     <form class="form-inline my-2 my-lg-0">
-        <span class="navbar-text">
-            ¡Bienvenido, {{user.email}}!
-        </span>
+      <span class="navbar-text">
+        ¡Bienvenido, {{user.email}}!
+      </span>
       <button class="btn btn-outline-danger my-2 my-sm-0" type="submit" (click)="logout()">Desconectarse</button>
     </form>
   </div>
