--- a/src/app/admin/navbar/navbar.component.html
+++ b/src/app/admin/navbar/navbar.component.html
@@ -16,6 +16,12 @@
         <a class="nav-link" routerLink="/admin/parameters">Parametros</a>
       </li>
       <li class="nav-item">
+        <a class="nav-link" routerLink="/admin/users">Usuarios</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/admin/rides">Viajes</a>
+      </li>
+      <li class="nav-item">
         <a class="nav-link" routerLink="/admin/scans">Escaneos</a>
       </li>
       <li class="nav-item">
