--- a/src/app/admin/scooters/updatescooter/updatescooter.component.html
+++ b/src/app/admin/scooters/updatescooter/updatescooter.component.html
@@ -1,7 +1,7 @@
 <div class=row>
   <div class="jumbotron jumbotron-fluid">
     <div class="container">
-      <h1 class="display-4">Actualizar scooter - {{scooter.serial}}</h1>
+      <h1 class="display-4">Actualizar scooter - {{scooter.numeroserial}}</h1>
     </div>
   </div>
 </div>
@@ -9,15 +9,27 @@
   <div class="card" style="width: 18rem;">
     <div class="card-body">
       <div class="form-group">
+        <label for="serial">Numerio serial</label>
+        <input class="form-control" id="serial" placeholder="Numero serial" name="serial"
+          [(ngModel)]="scooter.numeroserial" required>
+      </div>
+      <div class="form-group">
         <label for="estado">Estado</label>
         <select id="estado" class="form-control" [(ngModel)]="scooter.encendido">
-          <option [ngValue]="false">Falso</option>
-          <option [ngValue]="true">Verdadero</option>
+          <option [ngValue]="false">Apagado</option>
+          <option [ngValue]="true">Encendido</option>
         </select>
-        <div class=action-group>
-          <button type="submit" class="btn btn-danger" routerLink="/admin/scooters">Cancelar</button>
-          <button type="submit" class="btn btn-success" (click)="open(content)">Crear</button>
+      </div>
+      <div class="form-group">
+          <label for="estado">Disponibilidad</label>
+          <select id="estado" class="form-control" [(ngModel)]="scooter.enuso">
+            <option [ngValue]="false">Libre</option>
+            <option [ngValue]="true">En uso</option>
+          </select>
         </div>
+      <div class=action-group>
+        <button type="submit" class="btn btn-danger" routerLink="/admin/scooters">Cancelar</button>
+        <button type="submit" class="btn btn-success" (click)="open(content)">Modificar</button>
       </div>
     </div>
   </div>
