--- a/src/app/admin/navbar/navbar.component.html
+++ b/src/app/admin/navbar/navbar.component.html
@@ -25,6 +25,9 @@
         <a class="nav-link" routerLink="/admin/rides">Viajes</a>
       </li>
       <li class="nav-item">
+          <a class="nav-link" routerLink="/admin/payments">Pagos</a>
+        </li>
+      <li class="nav-item">
         <a class="nav-link" routerLink="/admin/scans">Escaneos</a>
       </li>
       <li class="nav-item">
