--- a/src/styles.scss
+++ b/src/styles.scss
@@ -33,3 +33,11 @@ div {
 .alerts-msg {
   white-space: pre-wrap;
 }
+
+.mapbox_popup{
+  text-align: center;
+  p{
+    margin:0;
+    padding:0;
+  }
+}
