--- a/src/app/admin/scooters/listscooters/listscooters.component.html
+++ b/src/app/admin/scooters/listscooters/listscooters.component.html
@@ -9,6 +9,7 @@
   <div class=row>
     <div class="card action-group">
       <div class="card-body">
+          <button type="button" class="btn btn-info" routerLink="/admin/scooters/maps/arrendados">Ver arrendados</button>
         <button type="button" class="btn btn-success" routerLink="/admin/scooters/new">Crear</button>
       </div>
     </div>
@@ -17,9 +18,11 @@
     <table class="table">
       <thead class="thead-light">
         <tr class="d-flex">
-          <th class="col-3" scope="col">Numero serial</th>
-          <th class="col-3" scope="col">Estado</th>
-          <th class="col-3" scope="col">Disponibilidad</th>
+          <th class="col-2" scope="col">Numero serial</th>
+          <th class="col-2" scope="col">Estado</th>
+          <th class="col-2" scope="col">Disponibilidad</th>
+          <th class="col-1" scope="col">Bateria restante</th>
+          <th class="col-2" scope="col">Ubicación</th>
           <th class="col-1" scope="col"></th>
           <th class="col-1" scope="col"></th>
           <th class="col-1" scope="col"></th>
@@ -27,11 +30,20 @@
       </thead>
       <tbody>
         <tr class="d-flex" *ngFor="let scooter of Scooters">
-          <td class="col-3">{{scooter.numeroserial}}</td>
-          <td class="col-3" *ngIf="scooter.encendido">Encendido</td>
-          <td class="col-3" *ngIf="!scooter.encendido">Apagado</td>
-          <td class="col-3" *ngIf="scooter.enuso">En uso</td>
-          <td class="col-3" *ngIf="!scooter.enuso">Disponible</td>
+          <td class="col-2">{{scooter.numeroserial}}</td>
+
+          <!--Los estados-->
+          <td class="col-2" *ngIf="scooter.encendido">Encendido</td>
+          <td class="col-2" *ngIf="!scooter.encendido">Apagado</td>
+
+          <!--Diferentes disponibilidades-->
+          <td class="col-2" *ngIf="!scooter.encendido">-</td>
+          <td class="col-2" *ngIf="scooter.encendido && scooter.enuso">En uso</td>
+          <td class="col-2" *ngIf="scooter.encendido && !scooter.enuso">Disponible</td>
+
+          <td class="col-1">{{scooter.scooterhistorico.bateria}}%</td>
+          <td class="col-2">{{scooter.scooterhistorico.latitud}},{{scooter.scooterhistorico.longitud}}</td>
+
           <td class="col-1"><button type="button" class="btn btn-primary btn-sm btn-block"
               (click)="view(scooter.id)">Ver</button></td>
           <td class="col-1"><button type="button" class="btn btn-warning btn-sm btn-block"
