--- a/src/app/admin/scooters/viewscooter/viewscooter.component.html
+++ b/src/app/admin/scooters/viewscooter/viewscooter.component.html
@@ -6,8 +6,16 @@
   </div>
 </div>
 <div class=row>
-  <div class="card" style="width: 18rem;">
+  <div class="card">
     <div class="card-body">
+      <p>
+        <strong>Bateria restante: </strong>
+        <span>{{scooter.scooterhistorico.bateria}}%</span>
+      </p>
+      <p>
+        <strong>Ubicación: </strong>
+        <span>{{scooter.scooterhistorico.latitud}},{{scooter.scooterhistorico.longitud}}</span>
+      </p>
       <p>
         <strong>Estado: </strong>
         <span *ngIf="scooter.encendido">Encendido</span>
@@ -15,8 +23,9 @@
       </p>
       <p>
         <strong>Disponibilidad: </strong>
-        <span *ngIf="scooter.enuso">En uso</span>
-        <span *ngIf="!scooter.enuso">Disponible</span>
+        <span *ngIf="!scooter.encendido">-</span>
+        <span *ngIf="scooter.encendido && scooter.enuso">En uso</span>
+        <span *ngIf="scooter.encendido && !scooter.enuso">Disponible</span>
       </p>
     </div>
   </div>
