Viajes y rastreo en tiempo real

--- a/src/app/admin/parameters/updateparam/updateparam.component.html
+++ b/src/app/admin/parameters/updateparam/updateparam.component.html
@@ -14,7 +14,7 @@
         </div>
       <div class=action-group>
         <button type="submit" class="btn btn-danger" routerLink="/admin/parameters">Cancelar</button>
-        <button type="submit" class="btn btn-success" (click)="open(content)">Crear</button>
+        <button type="submit" class="btn btn-success" (click)="open(content)">Actualizar</button>
       </div>
     </div>
   </div>
