--- a/src/app/admin/ride/listrides/listrides.component.html
+++ b/src/app/admin/ride/listrides/listrides.component.html
@@ -10,16 +10,20 @@
     <table class="table">
       <thead class="thead-light">
         <tr class="d-flex">
-          <th class="col-4" scope="col"></th>
-          <th class="col-7" scope="col"></th>
-          <th class="col-1" scope="col"></th>
+          <th class="col-3" scope="col">Inicio</th>
+          <th class="col-3" scope="col">Fin</th>
+          <th class="col-2" scope="col">Estado</th>
+          <th class="col-2" scope="col">Scooter</th>
+          <th class="col-2" scope="col">Usuario</th>
         </tr>
       </thead>
       <tbody>
         <tr class="d-flex" *ngFor="let ride of Rides">
-          <td class="col-4"></td>
-          <td class="col-7"></td>
-          <th class="col-1"></th>
+          <td class="col-3">{{getStringDate(ride.fechainicio)}}</td>
+          <td class="col-3">{{getStringDate(ride.fechafin)}}</td>
+          <td class="col-2">{{ride.estado}}</td>
+          <td class="col-2">{{ride.scooter.numeroserial}}</td>
+          <td class="col-2">{{ride.cliente.email}}</td>
         </tr>
       </tbody>
     </table>
