mapa de disponibles

--- a/src/app/admin/scooters/listscooters/listscooters.component.html
+++ b/src/app/admin/scooters/listscooters/listscooters.component.html
@@ -9,7 +9,9 @@
   <div class=row>
     <div class="card action-group">
       <div class="card-body">
-          <button type="button" class="btn btn-info" routerLink="/admin/scooters/maps/arrendados">Ver arrendados</button>
+        <button type="button" class="btn btn-info" routerLink="/admin/scooters/maps/disponibles">Ver
+          disponibles</button>
+        <button type="button" class="btn btn-info" routerLink="/admin/scooters/maps/arrendados">Ver arrendados</button>
         <button type="button" class="btn btn-success" routerLink="/admin/scooters/new">Crear</button>
       </div>
     </div>
