--- a/src/app/admin/scooters/listscooters/listscooters.component.html
+++ b/src/app/admin/scooters/listscooters/listscooters.component.html
@@ -12,6 +12,8 @@
         <button type="button" class="btn btn-info" routerLink="/admin/scooters/maps/disponibles">Ver
           disponibles</button>
         <button type="button" class="btn btn-info" routerLink="/admin/scooters/maps/arrendados">Ver arrendados</button>
+        <button type="button" class="btn btn-info" routerLink="/admin/scooters/maps/apagados">Ver
+          apagados</button>
         <button type="button" class="btn btn-success" routerLink="/admin/scooters/new">Crear</button>
       </div>
     </div>
