--- a/src/app/admin/navbar/navbar.component.html
+++ b/src/app/admin/navbar/navbar.component.html
@@ -27,6 +27,9 @@
       <li class="nav-item">
         <a class="nav-link" routerLink="/admin/payments">Pagos</a>
       </li>
+      <li class="nav-item">
+          <a class="nav-link" routerLink="/admin/notifications">Notificaciones</a>
+        </li>
     </ul>
     <form class="form-inline my-2 my-lg-0">
       <span class="navbar-text">
