--- a/src/app/admin/navbar/navbar.component.html
+++ b/src/app/admin/navbar/navbar.component.html
@@ -1,14 +1,11 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <a class="navbar-brand" routerLink="/index">Urudin</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+  <a class="navbar-brand" routerLink="/admin/">Urudin</a>
+  <button class="navbar-toggler" (click)="isNavbarCollapsed = !isNavbarCollapsed" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
     aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item">
-        <a class="nav-link" routerLink="/admin/">Principal</a>
-      </li>
+  <div [ngbCollapse]="isNavbarCollapsed" class="collapse navbar-collapse  navbar-toggleable-xs" id="navbarSupportedContent">
+    <ul class="nav navbar-nav mr-auto">
       <li class="nav-item">
         <a class="nav-link" routerLink="/admin/scooters">Scooters</a>
       </li>
