--- a/src/app/admin/scooters/updatescooter/updatescooter.component.html
+++ b/src/app/admin/scooters/updatescooter/updatescooter.component.html
@@ -1,12 +1,12 @@
 <div class=row>
   <div class="jumbotron jumbotron-fluid">
     <div class="container">
-      <h1 class="display-4">Actualizar scooter - {{scooter.numeroserial}}</h1>
+      <h1 class="display-4">Actualizar scooter</h1>
     </div>
   </div>
 </div>
 <div class=row>
-  <div class="card" style="width: 18rem;">
+  <div class="card" style="width: 18rem;" *ngIf="scooter.id">
     <div class="card-body">
       <div class="form-group">
         <label for="serial">Numerio serial</label>
