--- a/src/app/admin/users/listusers/listusers.component.html
+++ b/src/app/admin/users/listusers/listusers.component.html
@@ -6,18 +6,31 @@
   </div>
 </div>
 <div *ngIf="Users.length !== 0">
+    <div class=row>
+        <div class="card action-group">
+          <div class="card-body">
+            <form>
+              <div class="form-group form-inline">
+                Buscar por correo: <input name="filter" class="form-control ml-2" type="text" [(ngModel)]="filter" />
+              </div>
+            </form>
+          </div>
+        </div>
+      </div>
   <div class=row>
     <table class="table">
       <thead class="thead-light">
         <tr class="d-flex">
-          <th class="col-4" scope="col">Nombre completo</th>
+          <th class="col-1" scope="col">Identificador</th>
+          <th class="col-3" scope="col">Nombre completo</th>
           <th class="col-4" scope="col">Correo</th>
           <th class="col-4" scope="col">Saldo</th>
         </tr>
       </thead>
       <tbody>
-        <tr class="d-flex" *ngFor="let user of Users">
-          <td class="col-4">{{user.nombre}} {{user.apellido}}</td>
+        <tr class="d-flex" *ngFor="let user of Users | emailpipe:filter">
+          <td class="col-1">{{user.id}}</td>
+          <td class="col-3">{{user.nombre}} {{user.apellido}}</td>
           <td class="col-4">{{user.email}}</td>
           <td class="col-4">{{user.saldo}}</td>
         </tr>
